--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
     <hr>
     <form action="mailto:adam@detourmedia.ca" method="post" enctype="text/plain">
         <label for="">Your name:</label>
-        <input type="text" name="yourName" value=""><br>
+        <input type="text" name="yourName"><br>
         <label for="">Your email:</label>
-        <input type="email" name="yourEmail" value=""><br>
+        <input type="email" name="yourEmail"><br>
         <label for="">Your message:</label><br>
         <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit" name="">
